# opengl_s

./: CMakeLists.txt
src/: frag.glsl  main.cpp  vertex.glsl
